// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots DatePicker default 1`] = `
<div
  data-css-18sl43g=""
>
  <div
    data-css-1uksfg7=""
  >
    <div
      data-css-t3tkv6=""
    >
      <div
        data-css-10e2wtd=""
      >
        <div
          className="MuiFormControl-root MuiTextField-root"
          format="DD/MM/YYYY"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <label
            className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
            data-shrink={false}
          >
            Entrez une date
          </label>
          <div
            className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
            onClick={[Function]}
          >
            <input
              aria-invalid={false}
              autoFocus={false}
              className="MuiInputBase-input MuiInput-input"
              disabled={false}
              name="date"
              onAnimationStart={[Function]}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              readOnly={true}
              required={false}
              type="text"
              value=""
            />
          </div>
          
        </div>
        <div>
          <div
            data-css-1xjdp6g=""
          >
            <div
              data-css-1u3clyi=""
            />
            <div
              data-css-1vfpuyw=""
            />
          </div>
          <div
            data-css-1l117w4=""
          >
            <div
              data-css-6x2xk9=""
            />
            <div
              data-css-dh4rml=""
            />
          </div>
          <div
            data-css-3dqrhs=""
          >
            <div
              data-css-jidh41=""
            />
            <div
              data-css-zkhvkf=""
            />
          </div>
          <div
            data-css-14agfjn=""
          >
            <div
              data-css-1dkszzo=""
            />
            <div
              data-css-mqumhe=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DatePicker with selected date 1`] = `
<div
  data-css-18sl43g=""
>
  <div
    data-css-1uksfg7=""
  >
    <div
      data-css-t3tkv6=""
    >
      <div
        data-css-10e2wtd=""
      >
        <div
          className="MuiFormControl-root MuiTextField-root"
          format="DD/MM/YYYY"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <label
            className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
            data-shrink={true}
          >
            Entrez une date
          </label>
          <div
            className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
            onClick={[Function]}
          >
            <input
              aria-invalid={false}
              autoFocus={false}
              className="MuiInputBase-input MuiInput-input"
              disabled={false}
              name="date"
              onAnimationStart={[Function]}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              readOnly={true}
              required={false}
              type="text"
              value="02/07/2018"
            />
          </div>
          
        </div>
        <div>
          <div
            data-css-1xjdp6g=""
          >
            <div
              data-css-1u3clyi=""
            />
            <div
              data-css-1vfpuyw=""
            />
          </div>
          <div
            data-css-1l117w4=""
          >
            <div
              data-css-6x2xk9=""
            />
            <div
              data-css-dh4rml=""
            />
          </div>
          <div
            data-css-3dqrhs=""
          >
            <div
              data-css-jidh41=""
            />
            <div
              data-css-zkhvkf=""
            />
          </div>
          <div
            data-css-14agfjn=""
          >
            <div
              data-css-1dkszzo=""
            />
            <div
              data-css-mqumhe=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DeclarationQuestion default 1`] = `
<div
  data-css-18sl43g=""
>
  <div
    data-css-1uksfg7=""
  >
    <div
      data-css-t3tkv6=""
    >
      <div
        data-css-10e2wtd=""
      >
        <li
          className="sc-fzpjYC dNpCLl"
          id="hasWorked"
          style={Object {}}
        >
          <div
            className="sc-fznxsB cMuUhK"
            style={
              Object {
                "flexDirection": "row",
                "textAlign": "left",
              }
            }
          >
            <p
              className="MuiTypography-root sc-fznJRM eXceFO MuiTypography-body1"
            >
              Avez-vous travaillé ?
            </p>
            <fieldset
              className="MuiFormControl-root sc-fznWqX gNiuPx"
            >
              <div
                className="MuiFormGroup-root sc-fzqBZW htWvfI MuiFormGroup-row"
                role="radiogroup"
              >
                <label
                  className="MuiFormControlLabel-root sc-fzqNJr sc-fzoyAV lcPbZJ"
                >
                  <span
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-1 MuiRadio-root MuiRadio-colorSecondary sc-fzoXzr fcKHnE MuiIconButton-colorSecondary"
                    onBlur={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    style={
                      Object {
                        "color": "rgba(0, 0, 0, 0.54)",
                      }
                    }
                    tabIndex={null}
                  >
                    <span
                      className="MuiIconButton-label"
                    >
                      <input
                        aria-describedby="yes[hasWorked]"
                        checked={false}
                        className="PrivateSwitchBase-input-4"
                        disabled={false}
                        name="hasWorked"
                        onChange={[Function]}
                        type="radio"
                        value="yes"
                      />
                      <div
                        className="PrivateRadioButtonIcon-root-5"
                      >
                        <svg
                          aria-hidden={true}
                          className="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                          />
                        </svg>
                        <svg
                          aria-hidden={true}
                          className="MuiSvgIcon-root PrivateRadioButtonIcon-layer-6"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                          />
                        </svg>
                      </div>
                    </span>
                  </span>
                  <span
                    className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                  >
                    <span
                      style={
                        Object {
                          "color": "##000000de",
                          "fontWeight": null,
                        }
                      }
                    >
                      oui
                    </span>
                  </span>
                </label>
                <label
                  className="MuiFormControlLabel-root sc-fzqNJr sc-fzoLag gyMlPj"
                >
                  <span
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-1 MuiRadio-root MuiRadio-colorSecondary sc-fzoXzr fcKHnE MuiIconButton-colorSecondary"
                    onBlur={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    style={
                      Object {
                        "color": "rgba(0, 0, 0, 0.54)",
                      }
                    }
                    tabIndex={null}
                  >
                    <span
                      className="MuiIconButton-label"
                    >
                      <input
                        checked={false}
                        className="PrivateSwitchBase-input-4"
                        disabled={false}
                        name="hasWorked"
                        onChange={[Function]}
                        type="radio"
                        value="no"
                      />
                      <div
                        className="PrivateRadioButtonIcon-root-5"
                      >
                        <svg
                          aria-hidden={true}
                          className="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                          />
                        </svg>
                        <svg
                          aria-hidden={true}
                          className="MuiSvgIcon-root PrivateRadioButtonIcon-layer-6"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                          />
                        </svg>
                      </div>
                    </span>
                  </span>
                  <span
                    className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                  >
                    <span
                      style={
                        Object {
                          "color": "##000000de",
                          "fontWeight": null,
                        }
                      }
                    >
                      non
                    </span>
                  </span>
                </label>
              </div>
            </fieldset>
          </div>
        </li>
        <div>
          <div
            data-css-1xjdp6g=""
          >
            <div
              data-css-1u3clyi=""
            />
            <div
              data-css-1vfpuyw=""
            />
          </div>
          <div
            data-css-1l117w4=""
          >
            <div
              data-css-6x2xk9=""
            />
            <div
              data-css-dh4rml=""
            />
          </div>
          <div
            data-css-3dqrhs=""
          >
            <div
              data-css-jidh41=""
            />
            <div
              data-css-zkhvkf=""
            />
          </div>
          <div
            data-css-14agfjn=""
          >
            <div
              data-css-1dkszzo=""
            />
            <div
              data-css-mqumhe=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DeclarationQuestion no 1`] = `
<div
  data-css-18sl43g=""
>
  <div
    data-css-1uksfg7=""
  >
    <div
      data-css-t3tkv6=""
    >
      <div
        data-css-10e2wtd=""
      >
        <li
          className="sc-fzpjYC dNpCLl"
          id="hasWorked"
          style={Object {}}
        >
          <div
            className="sc-fznxsB cMuUhK"
            style={
              Object {
                "flexDirection": "row",
                "textAlign": "left",
              }
            }
          >
            <p
              className="MuiTypography-root sc-fznJRM eXceFO MuiTypography-body1"
            >
              Avez-vous travaillé ?
            </p>
            <fieldset
              className="MuiFormControl-root sc-fznWqX gNiuPx"
            >
              <div
                className="MuiFormGroup-root sc-fzqBZW htWvfI MuiFormGroup-row"
                role="radiogroup"
              >
                <label
                  className="MuiFormControlLabel-root sc-fzqNJr sc-fzoyAV lcPbZJ"
                >
                  <span
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-22 MuiRadio-root MuiRadio-colorSecondary sc-fzoXzr fcKHnE MuiIconButton-colorSecondary"
                    onBlur={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    style={
                      Object {
                        "color": "rgba(0, 0, 0, 0.54)",
                      }
                    }
                    tabIndex={null}
                  >
                    <span
                      className="MuiIconButton-label"
                    >
                      <input
                        aria-describedby="yes[hasWorked]"
                        checked={false}
                        className="PrivateSwitchBase-input-25"
                        disabled={false}
                        name="hasWorked"
                        onChange={[Function]}
                        type="radio"
                        value="yes"
                      />
                      <div
                        className="PrivateRadioButtonIcon-root-26"
                      >
                        <svg
                          aria-hidden={true}
                          className="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                          />
                        </svg>
                        <svg
                          aria-hidden={true}
                          className="MuiSvgIcon-root PrivateRadioButtonIcon-layer-27"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                          />
                        </svg>
                      </div>
                    </span>
                  </span>
                  <span
                    className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                  >
                    <span
                      style={
                        Object {
                          "color": "##000000de",
                          "fontWeight": null,
                        }
                      }
                    >
                      oui
                    </span>
                  </span>
                </label>
                <label
                  className="MuiFormControlLabel-root sc-fzqNJr sc-fzoLag gyMlPj"
                >
                  <span
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-22 MuiRadio-root MuiRadio-colorSecondary sc-fzoXzr fcKHnE PrivateSwitchBase-checked-23 Mui-checked MuiIconButton-colorSecondary"
                    onBlur={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    style={
                      Object {
                        "color": "#0065DB",
                      }
                    }
                    tabIndex={null}
                  >
                    <span
                      className="MuiIconButton-label"
                    >
                      <input
                        checked={true}
                        className="PrivateSwitchBase-input-25"
                        disabled={false}
                        name="hasWorked"
                        onChange={[Function]}
                        type="radio"
                        value="no"
                      />
                      <div
                        className="PrivateRadioButtonIcon-root-26 PrivateRadioButtonIcon-checked-28"
                      >
                        <svg
                          aria-hidden={true}
                          className="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                          />
                        </svg>
                        <svg
                          aria-hidden={true}
                          className="MuiSvgIcon-root PrivateRadioButtonIcon-layer-27"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                          />
                        </svg>
                      </div>
                    </span>
                  </span>
                  <span
                    className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                  >
                    <span
                      style={
                        Object {
                          "color": "##000000de",
                          "fontWeight": "bold",
                        }
                      }
                    >
                      non
                    </span>
                  </span>
                </label>
              </div>
            </fieldset>
          </div>
        </li>
        <div>
          <div
            data-css-1xjdp6g=""
          >
            <div
              data-css-1u3clyi=""
            />
            <div
              data-css-1vfpuyw=""
            />
          </div>
          <div
            data-css-1l117w4=""
          >
            <div
              data-css-6x2xk9=""
            />
            <div
              data-css-dh4rml=""
            />
          </div>
          <div
            data-css-3dqrhs=""
          >
            <div
              data-css-jidh41=""
            />
            <div
              data-css-zkhvkf=""
            />
          </div>
          <div
            data-css-14agfjn=""
          >
            <div
              data-css-1dkszzo=""
            />
            <div
              data-css-mqumhe=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DeclarationQuestion vertical layout 1`] = `
<div
  data-css-18sl43g=""
>
  <div
    data-css-1uksfg7=""
  >
    <div
      data-css-t3tkv6=""
    >
      <div
        data-css-10e2wtd=""
      >
        <li
          className="sc-fzpjYC dNpCLl"
          id="hasWorked"
          style={Object {}}
        >
          <div
            className="sc-fznxsB cMuUhK"
            style={
              Object {
                "flexDirection": "column",
                "textAlign": "center",
              }
            }
          >
            <p
              className="MuiTypography-root sc-fznJRM eXceFO MuiTypography-body1"
            >
              Avez-vous travaillé ?
            </p>
            <fieldset
              className="MuiFormControl-root sc-fznWqX gNiuPx"
            >
              <div
                className="MuiFormGroup-root sc-fzqBZW htWvfI MuiFormGroup-row"
                role="radiogroup"
              >
                <label
                  className="MuiFormControlLabel-root sc-fzqNJr sc-fzoyAV lcPbZJ"
                >
                  <span
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-8 MuiRadio-root MuiRadio-colorSecondary sc-fzoXzr fcKHnE MuiIconButton-colorSecondary"
                    onBlur={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    style={
                      Object {
                        "color": "rgba(0, 0, 0, 0.54)",
                      }
                    }
                    tabIndex={null}
                  >
                    <span
                      className="MuiIconButton-label"
                    >
                      <input
                        aria-describedby="yes[hasWorked]"
                        checked={false}
                        className="PrivateSwitchBase-input-11"
                        disabled={false}
                        name="hasWorked"
                        onChange={[Function]}
                        type="radio"
                        value="yes"
                      />
                      <div
                        className="PrivateRadioButtonIcon-root-12"
                      >
                        <svg
                          aria-hidden={true}
                          className="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                          />
                        </svg>
                        <svg
                          aria-hidden={true}
                          className="MuiSvgIcon-root PrivateRadioButtonIcon-layer-13"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                          />
                        </svg>
                      </div>
                    </span>
                  </span>
                  <span
                    className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                  >
                    <span
                      style={
                        Object {
                          "color": "##000000de",
                          "fontWeight": null,
                        }
                      }
                    >
                      oui
                    </span>
                  </span>
                </label>
                <label
                  className="MuiFormControlLabel-root sc-fzqNJr sc-fzoLag gyMlPj"
                >
                  <span
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-8 MuiRadio-root MuiRadio-colorSecondary sc-fzoXzr fcKHnE MuiIconButton-colorSecondary"
                    onBlur={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    style={
                      Object {
                        "color": "rgba(0, 0, 0, 0.54)",
                      }
                    }
                    tabIndex={null}
                  >
                    <span
                      className="MuiIconButton-label"
                    >
                      <input
                        checked={false}
                        className="PrivateSwitchBase-input-11"
                        disabled={false}
                        name="hasWorked"
                        onChange={[Function]}
                        type="radio"
                        value="no"
                      />
                      <div
                        className="PrivateRadioButtonIcon-root-12"
                      >
                        <svg
                          aria-hidden={true}
                          className="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                          />
                        </svg>
                        <svg
                          aria-hidden={true}
                          className="MuiSvgIcon-root PrivateRadioButtonIcon-layer-13"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                          />
                        </svg>
                      </div>
                    </span>
                  </span>
                  <span
                    className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                  >
                    <span
                      style={
                        Object {
                          "color": "##000000de",
                          "fontWeight": null,
                        }
                      }
                    >
                      non
                    </span>
                  </span>
                </label>
              </div>
            </fieldset>
          </div>
        </li>
        <div>
          <div
            data-css-1xjdp6g=""
          >
            <div
              data-css-1u3clyi=""
            />
            <div
              data-css-1vfpuyw=""
            />
          </div>
          <div
            data-css-1l117w4=""
          >
            <div
              data-css-6x2xk9=""
            />
            <div
              data-css-dh4rml=""
            />
          </div>
          <div
            data-css-3dqrhs=""
          >
            <div
              data-css-jidh41=""
            />
            <div
              data-css-zkhvkf=""
            />
          </div>
          <div
            data-css-14agfjn=""
          >
            <div
              data-css-1dkszzo=""
            />
            <div
              data-css-mqumhe=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DeclarationQuestion with children on no 1`] = `
<div
  data-css-18sl43g=""
>
  <div
    data-css-1uksfg7=""
  >
    <div
      data-css-t3tkv6=""
    >
      <div
        data-css-10e2wtd=""
      >
        <li
          className="sc-fzpjYC dNpCLl"
          id="hasWorked"
          style={Object {}}
        >
          <div
            className="sc-fznxsB cMuUhK"
            style={
              Object {
                "flexDirection": "row",
                "textAlign": "left",
              }
            }
          >
            <p
              className="MuiTypography-root sc-fznJRM eXceFO MuiTypography-body1"
            >
              Avez-vous travaillé ?
            </p>
            <fieldset
              className="MuiFormControl-root sc-fznWqX gNiuPx"
            >
              <div
                className="MuiFormGroup-root sc-fzqBZW htWvfI MuiFormGroup-row"
                role="radiogroup"
              >
                <label
                  className="MuiFormControlLabel-root sc-fzqNJr sc-fzoyAV lcPbZJ"
                >
                  <span
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-36 MuiRadio-root MuiRadio-colorSecondary sc-fzoXzr fcKHnE MuiIconButton-colorSecondary"
                    onBlur={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    style={
                      Object {
                        "color": "rgba(0, 0, 0, 0.54)",
                      }
                    }
                    tabIndex={null}
                  >
                    <span
                      className="MuiIconButton-label"
                    >
                      <input
                        aria-describedby="yes[hasWorked]"
                        checked={false}
                        className="PrivateSwitchBase-input-39"
                        disabled={false}
                        name="hasWorked"
                        onChange={[Function]}
                        type="radio"
                        value="yes"
                      />
                      <div
                        className="PrivateRadioButtonIcon-root-40"
                      >
                        <svg
                          aria-hidden={true}
                          className="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                          />
                        </svg>
                        <svg
                          aria-hidden={true}
                          className="MuiSvgIcon-root PrivateRadioButtonIcon-layer-41"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                          />
                        </svg>
                      </div>
                    </span>
                  </span>
                  <span
                    className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                  >
                    <span
                      style={
                        Object {
                          "color": "##000000de",
                          "fontWeight": null,
                        }
                      }
                    >
                      oui
                    </span>
                  </span>
                </label>
                <label
                  className="MuiFormControlLabel-root sc-fzqNJr sc-fzoLag gyMlPj"
                >
                  <span
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-36 MuiRadio-root MuiRadio-colorSecondary sc-fzoXzr fcKHnE PrivateSwitchBase-checked-37 Mui-checked MuiIconButton-colorSecondary"
                    onBlur={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    style={
                      Object {
                        "color": "#0065DB",
                      }
                    }
                    tabIndex={null}
                  >
                    <span
                      className="MuiIconButton-label"
                    >
                      <input
                        checked={true}
                        className="PrivateSwitchBase-input-39"
                        disabled={false}
                        name="hasWorked"
                        onChange={[Function]}
                        type="radio"
                        value="no"
                      />
                      <div
                        className="PrivateRadioButtonIcon-root-40 PrivateRadioButtonIcon-checked-42"
                      >
                        <svg
                          aria-hidden={true}
                          className="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                          />
                        </svg>
                        <svg
                          aria-hidden={true}
                          className="MuiSvgIcon-root PrivateRadioButtonIcon-layer-41"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                          />
                        </svg>
                      </div>
                    </span>
                  </span>
                  <span
                    className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                  >
                    <span
                      style={
                        Object {
                          "color": "##000000de",
                          "fontWeight": "bold",
                        }
                      }
                    >
                      non
                    </span>
                  </span>
                </label>
              </div>
            </fieldset>
          </div>
          <div>
            Sub question
          </div>
        </li>
        <div>
          <div
            data-css-1xjdp6g=""
          >
            <div
              data-css-1u3clyi=""
            />
            <div
              data-css-1vfpuyw=""
            />
          </div>
          <div
            data-css-1l117w4=""
          >
            <div
              data-css-6x2xk9=""
            />
            <div
              data-css-dh4rml=""
            />
          </div>
          <div
            data-css-3dqrhs=""
          >
            <div
              data-css-jidh41=""
            />
            <div
              data-css-zkhvkf=""
            />
          </div>
          <div
            data-css-14agfjn=""
          >
            <div
              data-css-1dkszzo=""
            />
            <div
              data-css-mqumhe=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DeclarationQuestion with children on yes 1`] = `
<div
  data-css-18sl43g=""
>
  <div
    data-css-1uksfg7=""
  >
    <div
      data-css-t3tkv6=""
    >
      <div
        data-css-10e2wtd=""
      >
        <li
          className="sc-fzpjYC dNpCLl"
          id="hasWorked"
          style={Object {}}
        >
          <div
            className="sc-fznxsB cMuUhK"
            style={
              Object {
                "flexDirection": "row",
                "textAlign": "left",
              }
            }
          >
            <p
              className="MuiTypography-root sc-fznJRM eXceFO MuiTypography-body1"
            >
              Avez-vous travaillé ?
            </p>
            <fieldset
              className="MuiFormControl-root sc-fznWqX gNiuPx"
            >
              <div
                className="MuiFormGroup-root sc-fzqBZW htWvfI MuiFormGroup-row"
                role="radiogroup"
              >
                <label
                  className="MuiFormControlLabel-root sc-fzqNJr sc-fzoyAV lcPbZJ"
                >
                  <span
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-29 MuiRadio-root MuiRadio-colorSecondary sc-fzoXzr fcKHnE PrivateSwitchBase-checked-30 Mui-checked MuiIconButton-colorSecondary"
                    onBlur={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    style={
                      Object {
                        "color": "#0065DB",
                      }
                    }
                    tabIndex={null}
                  >
                    <span
                      className="MuiIconButton-label"
                    >
                      <input
                        aria-describedby="yes[hasWorked]"
                        checked={true}
                        className="PrivateSwitchBase-input-32"
                        disabled={false}
                        name="hasWorked"
                        onChange={[Function]}
                        type="radio"
                        value="yes"
                      />
                      <div
                        className="PrivateRadioButtonIcon-root-33 PrivateRadioButtonIcon-checked-35"
                      >
                        <svg
                          aria-hidden={true}
                          className="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                          />
                        </svg>
                        <svg
                          aria-hidden={true}
                          className="MuiSvgIcon-root PrivateRadioButtonIcon-layer-34"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                          />
                        </svg>
                      </div>
                    </span>
                  </span>
                  <span
                    className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                  >
                    <span
                      style={
                        Object {
                          "color": "##000000de",
                          "fontWeight": "bold",
                        }
                      }
                    >
                      oui
                    </span>
                  </span>
                </label>
                <label
                  className="MuiFormControlLabel-root sc-fzqNJr sc-fzoLag gyMlPj"
                >
                  <span
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-29 MuiRadio-root MuiRadio-colorSecondary sc-fzoXzr fcKHnE MuiIconButton-colorSecondary"
                    onBlur={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    style={
                      Object {
                        "color": "rgba(0, 0, 0, 0.54)",
                      }
                    }
                    tabIndex={null}
                  >
                    <span
                      className="MuiIconButton-label"
                    >
                      <input
                        checked={false}
                        className="PrivateSwitchBase-input-32"
                        disabled={false}
                        name="hasWorked"
                        onChange={[Function]}
                        type="radio"
                        value="no"
                      />
                      <div
                        className="PrivateRadioButtonIcon-root-33"
                      >
                        <svg
                          aria-hidden={true}
                          className="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                          />
                        </svg>
                        <svg
                          aria-hidden={true}
                          className="MuiSvgIcon-root PrivateRadioButtonIcon-layer-34"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                          />
                        </svg>
                      </div>
                    </span>
                  </span>
                  <span
                    className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                  >
                    <span
                      style={
                        Object {
                          "color": "##000000de",
                          "fontWeight": null,
                        }
                      }
                    >
                      non
                    </span>
                  </span>
                </label>
              </div>
            </fieldset>
          </div>
          <div>
            Sub question
          </div>
        </li>
        <div>
          <div
            data-css-1xjdp6g=""
          >
            <div
              data-css-1u3clyi=""
            />
            <div
              data-css-1vfpuyw=""
            />
          </div>
          <div
            data-css-1l117w4=""
          >
            <div
              data-css-6x2xk9=""
            />
            <div
              data-css-dh4rml=""
            />
          </div>
          <div
            data-css-3dqrhs=""
          >
            <div
              data-css-jidh41=""
            />
            <div
              data-css-zkhvkf=""
            />
          </div>
          <div
            data-css-14agfjn=""
          >
            <div
              data-css-1dkszzo=""
            />
            <div
              data-css-mqumhe=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DeclarationQuestion yes 1`] = `
<div
  data-css-18sl43g=""
>
  <div
    data-css-1uksfg7=""
  >
    <div
      data-css-t3tkv6=""
    >
      <div
        data-css-10e2wtd=""
      >
        <li
          className="sc-fzpjYC dNpCLl"
          id="hasWorked"
          style={Object {}}
        >
          <div
            className="sc-fznxsB cMuUhK"
            style={
              Object {
                "flexDirection": "row",
                "textAlign": "left",
              }
            }
          >
            <p
              className="MuiTypography-root sc-fznJRM eXceFO MuiTypography-body1"
            >
              Avez-vous travaillé ?
            </p>
            <fieldset
              className="MuiFormControl-root sc-fznWqX gNiuPx"
            >
              <div
                className="MuiFormGroup-root sc-fzqBZW htWvfI MuiFormGroup-row"
                role="radiogroup"
              >
                <label
                  className="MuiFormControlLabel-root sc-fzqNJr sc-fzoyAV lcPbZJ"
                >
                  <span
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-15 MuiRadio-root MuiRadio-colorSecondary sc-fzoXzr fcKHnE PrivateSwitchBase-checked-16 Mui-checked MuiIconButton-colorSecondary"
                    onBlur={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    style={
                      Object {
                        "color": "#0065DB",
                      }
                    }
                    tabIndex={null}
                  >
                    <span
                      className="MuiIconButton-label"
                    >
                      <input
                        aria-describedby="yes[hasWorked]"
                        checked={true}
                        className="PrivateSwitchBase-input-18"
                        disabled={false}
                        name="hasWorked"
                        onChange={[Function]}
                        type="radio"
                        value="yes"
                      />
                      <div
                        className="PrivateRadioButtonIcon-root-19 PrivateRadioButtonIcon-checked-21"
                      >
                        <svg
                          aria-hidden={true}
                          className="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                          />
                        </svg>
                        <svg
                          aria-hidden={true}
                          className="MuiSvgIcon-root PrivateRadioButtonIcon-layer-20"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                          />
                        </svg>
                      </div>
                    </span>
                  </span>
                  <span
                    className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                  >
                    <span
                      style={
                        Object {
                          "color": "##000000de",
                          "fontWeight": "bold",
                        }
                      }
                    >
                      oui
                    </span>
                  </span>
                </label>
                <label
                  className="MuiFormControlLabel-root sc-fzqNJr sc-fzoLag gyMlPj"
                >
                  <span
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-15 MuiRadio-root MuiRadio-colorSecondary sc-fzoXzr fcKHnE MuiIconButton-colorSecondary"
                    onBlur={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    style={
                      Object {
                        "color": "rgba(0, 0, 0, 0.54)",
                      }
                    }
                    tabIndex={null}
                  >
                    <span
                      className="MuiIconButton-label"
                    >
                      <input
                        checked={false}
                        className="PrivateSwitchBase-input-18"
                        disabled={false}
                        name="hasWorked"
                        onChange={[Function]}
                        type="radio"
                        value="no"
                      />
                      <div
                        className="PrivateRadioButtonIcon-root-19"
                      >
                        <svg
                          aria-hidden={true}
                          className="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                          />
                        </svg>
                        <svg
                          aria-hidden={true}
                          className="MuiSvgIcon-root PrivateRadioButtonIcon-layer-20"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                          />
                        </svg>
                      </div>
                    </span>
                  </span>
                  <span
                    className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                  >
                    <span
                      style={
                        Object {
                          "color": "##000000de",
                          "fontWeight": null,
                        }
                      }
                    >
                      non
                    </span>
                  </span>
                </label>
              </div>
            </fieldset>
          </div>
        </li>
        <div>
          <div
            data-css-1xjdp6g=""
          >
            <div
              data-css-1u3clyi=""
            />
            <div
              data-css-1vfpuyw=""
            />
          </div>
          <div
            data-css-1l117w4=""
          >
            <div
              data-css-6x2xk9=""
            />
            <div
              data-css-dh4rml=""
            />
          </div>
          <div
            data-css-3dqrhs=""
          >
            <div
              data-css-jidh41=""
            />
            <div
              data-css-zkhvkf=""
            />
          </div>
          <div
            data-css-14agfjn=""
          >
            <div
              data-css-1dkszzo=""
            />
            <div
              data-css-mqumhe=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DocumentUpload default for declaration info document (light version) 1`] = `null`;

exports[`Storyshots DocumentUpload default for declaration info document 1`] = `null`;

exports[`Storyshots DocumentUpload default for employer document (light version 1`] = `null`;

exports[`Storyshots DocumentUpload default for employer document 1`] = `null`;

exports[`Storyshots DocumentUpload error (light version) 1`] = `null`;

exports[`Storyshots DocumentUpload error 1`] = `null`;

exports[`Storyshots DocumentUpload loading (light version) 1`] = `null`;

exports[`Storyshots DocumentUpload loading 1`] = `null`;

exports[`Storyshots DocumentUpload with file (light version) 1`] = `null`;

exports[`Storyshots DocumentUpload with file 1`] = `null`;

exports[`Storyshots DocumentUpload with transmitted file (light version) 1`] = `null`;

exports[`Storyshots DocumentUpload with transmitted file 1`] = `null`;

exports[`Storyshots EmployerQuestion default 1`] = `
<div
  data-css-18sl43g=""
>
  <div
    data-css-1uksfg7=""
  >
    <div
      data-css-t3tkv6=""
    >
      <div
        data-css-10e2wtd=""
      >
        <div>
          <div
            data-css-1xjdp6g=""
          >
            <div
              data-css-1u3clyi=""
            />
            <div
              data-css-1vfpuyw=""
            />
          </div>
          <div
            data-css-1l117w4=""
          >
            <div
              data-css-6x2xk9=""
            />
            <div
              data-css-dh4rml=""
            />
          </div>
          <div
            data-css-3dqrhs=""
          >
            <div
              data-css-jidh41=""
            />
            <div
              data-css-zkhvkf=""
            />
          </div>
          <div
            data-css-14agfjn=""
          >
            <div
              data-css-1dkszzo=""
            />
            <div
              data-css-mqumhe=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots EmployerQuestion filled 1`] = `
<div
  data-css-18sl43g=""
>
  <div
    data-css-1uksfg7=""
  >
    <div
      data-css-t3tkv6=""
    >
      <div
        data-css-10e2wtd=""
      >
        <div>
          <div
            data-css-1xjdp6g=""
          >
            <div
              data-css-1u3clyi=""
            />
            <div
              data-css-1vfpuyw=""
            />
          </div>
          <div
            data-css-1l117w4=""
          >
            <div
              data-css-6x2xk9=""
            />
            <div
              data-css-dh4rml=""
            />
          </div>
          <div
            data-css-3dqrhs=""
          >
            <div
              data-css-jidh41=""
            />
            <div
              data-css-zkhvkf=""
            />
          </div>
          <div
            data-css-14agfjn=""
          >
            <div
              data-css-1dkszzo=""
            />
            <div
              data-css-mqumhe=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots EmployerQuestion filled with errors 1`] = `
<div
  data-css-18sl43g=""
>
  <div
    data-css-1uksfg7=""
  >
    <div
      data-css-t3tkv6=""
    >
      <div
        data-css-10e2wtd=""
      >
        <div>
          <div
            data-css-1xjdp6g=""
          >
            <div
              data-css-1u3clyi=""
            />
            <div
              data-css-1vfpuyw=""
            />
          </div>
          <div
            data-css-1l117w4=""
          >
            <div
              data-css-6x2xk9=""
            />
            <div
              data-css-dh4rml=""
            />
          </div>
          <div
            data-css-3dqrhs=""
          >
            <div
              data-css-jidh41=""
            />
            <div
              data-css-zkhvkf=""
            />
          </div>
          <div
            data-css-14agfjn=""
          >
            <div
              data-css-1dkszzo=""
            />
            <div
              data-css-mqumhe=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots EuroInput default 1`] = `
<div
  data-css-18sl43g=""
>
  <div
    data-css-1uksfg7=""
  >
    <div
      data-css-t3tkv6=""
    >
      <div
        data-css-10e2wtd=""
      >
        <input
          inputMode="numeric"
          maxLength={16}
          name="euro"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseUp={[Function]}
          type="text"
          value=""
        />
        <div>
          <div
            data-css-1xjdp6g=""
          >
            <div
              data-css-1u3clyi=""
            />
            <div
              data-css-1vfpuyw=""
            />
          </div>
          <div
            data-css-1l117w4=""
          >
            <div
              data-css-6x2xk9=""
            />
            <div
              data-css-dh4rml=""
            />
          </div>
          <div
            data-css-3dqrhs=""
          >
            <div
              data-css-jidh41=""
            />
            <div
              data-css-zkhvkf=""
            />
          </div>
          <div
            data-css-14agfjn=""
          >
            <div
              data-css-1dkszzo=""
            />
            <div
              data-css-mqumhe=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots EuroInput with big float value 1`] = `
<div
  data-css-18sl43g=""
>
  <div
    data-css-1uksfg7=""
  >
    <div
      data-css-t3tkv6=""
    >
      <div
        data-css-10e2wtd=""
      >
        <input
          inputMode="numeric"
          maxLength={16}
          name="euro"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseUp={[Function]}
          type="text"
          value="10 200,40€ brut"
        />
        <div>
          <div
            data-css-1xjdp6g=""
          >
            <div
              data-css-1u3clyi=""
            />
            <div
              data-css-1vfpuyw=""
            />
          </div>
          <div
            data-css-1l117w4=""
          >
            <div
              data-css-6x2xk9=""
            />
            <div
              data-css-dh4rml=""
            />
          </div>
          <div
            data-css-3dqrhs=""
          >
            <div
              data-css-jidh41=""
            />
            <div
              data-css-zkhvkf=""
            />
          </div>
          <div
            data-css-14agfjn=""
          >
            <div
              data-css-1dkszzo=""
            />
            <div
              data-css-mqumhe=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots EuroInput with big integer value 1`] = `
<div
  data-css-18sl43g=""
>
  <div
    data-css-1uksfg7=""
  >
    <div
      data-css-t3tkv6=""
    >
      <div
        data-css-10e2wtd=""
      >
        <input
          inputMode="numeric"
          maxLength={16}
          name="euro"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseUp={[Function]}
          type="text"
          value="10 000,00€ brut"
        />
        <div>
          <div
            data-css-1xjdp6g=""
          >
            <div
              data-css-1u3clyi=""
            />
            <div
              data-css-1vfpuyw=""
            />
          </div>
          <div
            data-css-1l117w4=""
          >
            <div
              data-css-6x2xk9=""
            />
            <div
              data-css-dh4rml=""
            />
          </div>
          <div
            data-css-3dqrhs=""
          >
            <div
              data-css-jidh41=""
            />
            <div
              data-css-zkhvkf=""
            />
          </div>
          <div
            data-css-14agfjn=""
          >
            <div
              data-css-1dkszzo=""
            />
            <div
              data-css-mqumhe=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots EuroInput with float value 1`] = `
<div
  data-css-18sl43g=""
>
  <div
    data-css-1uksfg7=""
  >
    <div
      data-css-t3tkv6=""
    >
      <div
        data-css-10e2wtd=""
      >
        <input
          inputMode="numeric"
          maxLength={16}
          name="euro"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseUp={[Function]}
          type="text"
          value="1,20€ brut"
        />
        <div>
          <div
            data-css-1xjdp6g=""
          >
            <div
              data-css-1u3clyi=""
            />
            <div
              data-css-1vfpuyw=""
            />
          </div>
          <div
            data-css-1l117w4=""
          >
            <div
              data-css-6x2xk9=""
            />
            <div
              data-css-dh4rml=""
            />
          </div>
          <div
            data-css-3dqrhs=""
          >
            <div
              data-css-jidh41=""
            />
            <div
              data-css-zkhvkf=""
            />
          </div>
          <div
            data-css-14agfjn=""
          >
            <div
              data-css-1dkszzo=""
            />
            <div
              data-css-mqumhe=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots EuroInput with integer value 1`] = `
<div
  data-css-18sl43g=""
>
  <div
    data-css-1uksfg7=""
  >
    <div
      data-css-t3tkv6=""
    >
      <div
        data-css-10e2wtd=""
      >
        <input
          inputMode="numeric"
          maxLength={16}
          name="euro"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseUp={[Function]}
          type="text"
          value="1,00€ brut"
        />
        <div>
          <div
            data-css-1xjdp6g=""
          >
            <div
              data-css-1u3clyi=""
            />
            <div
              data-css-1vfpuyw=""
            />
          </div>
          <div
            data-css-1l117w4=""
          >
            <div
              data-css-6x2xk9=""
            />
            <div
              data-css-dh4rml=""
            />
          </div>
          <div
            data-css-3dqrhs=""
          >
            <div
              data-css-jidh41=""
            />
            <div
              data-css-zkhvkf=""
            />
          </div>
          <div
            data-css-14agfjn=""
          >
            <div
              data-css-1dkszzo=""
            />
            <div
              data-css-mqumhe=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots HourInput default 1`] = `
<div
  data-css-18sl43g=""
>
  <div
    data-css-1uksfg7=""
  >
    <div
      data-css-t3tkv6=""
    >
      <div
        data-css-10e2wtd=""
      >
        <input
          inputMode="numeric"
          name="hour"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseUp={[Function]}
          type="text"
          value=""
        />
        <div>
          <div
            data-css-1xjdp6g=""
          >
            <div
              data-css-1u3clyi=""
            />
            <div
              data-css-1vfpuyw=""
            />
          </div>
          <div
            data-css-1l117w4=""
          >
            <div
              data-css-6x2xk9=""
            />
            <div
              data-css-dh4rml=""
            />
          </div>
          <div
            data-css-3dqrhs=""
          >
            <div
              data-css-jidh41=""
            />
            <div
              data-css-zkhvkf=""
            />
          </div>
          <div
            data-css-14agfjn=""
          >
            <div
              data-css-1dkszzo=""
            />
            <div
              data-css-mqumhe=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots HourInput with integer value 1`] = `
<div
  data-css-18sl43g=""
>
  <div
    data-css-1uksfg7=""
  >
    <div
      data-css-t3tkv6=""
    >
      <div
        data-css-10e2wtd=""
      >
        <input
          inputMode="numeric"
          name="hour"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseUp={[Function]}
          type="text"
          value="102h"
        />
        <div>
          <div
            data-css-1xjdp6g=""
          >
            <div
              data-css-1u3clyi=""
            />
            <div
              data-css-1vfpuyw=""
            />
          </div>
          <div
            data-css-1l117w4=""
          >
            <div
              data-css-6x2xk9=""
            />
            <div
              data-css-dh4rml=""
            />
          </div>
          <div
            data-css-3dqrhs=""
          >
            <div
              data-css-jidh41=""
            />
            <div
              data-css-zkhvkf=""
            />
          </div>
          <div
            data-css-14agfjn=""
          >
            <div
              data-css-1dkszzo=""
            />
            <div
              data-css-mqumhe=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots PEConnectLink dark 1`] = `
<div
  data-css-18sl43g=""
>
  <div
    data-css-1uksfg7=""
  >
    <div
      data-css-t3tkv6=""
    >
      <div
        data-css-10e2wtd=""
      >
        <a
          className="sc-fznyYp fATwAx"
          href="/api/login"
        >
          <img
            alt=""
            className="sc-fznLxA glxirR"
            height="31"
            src="PEConnectIcon-white.svg"
            width="34"
          />
          <span
            className="sc-fznXWL ljBoXT"
          >
            Se connecter avec Pôle emploi
          </span>
        </a>
        <div>
          <div
            data-css-1xjdp6g=""
          >
            <div
              data-css-1u3clyi=""
            />
            <div
              data-css-1vfpuyw=""
            />
          </div>
          <div
            data-css-1l117w4=""
          >
            <div
              data-css-6x2xk9=""
            />
            <div
              data-css-dh4rml=""
            />
          </div>
          <div
            data-css-3dqrhs=""
          >
            <div
              data-css-jidh41=""
            />
            <div
              data-css-zkhvkf=""
            />
          </div>
          <div
            data-css-14agfjn=""
          >
            <div
              data-css-1dkszzo=""
            />
            <div
              data-css-mqumhe=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots PEConnectLink light 1`] = `
<div
  data-css-18sl43g=""
>
  <div
    data-css-1uksfg7=""
  >
    <div
      data-css-t3tkv6=""
    >
      <div
        data-css-10e2wtd=""
      >
        <a
          className="sc-fznyYp kIxsJJ"
          href="/api/login"
        >
          <img
            alt=""
            className="sc-fznLxA glxirR"
            height="31"
            src="PEConnectIcon-blue.svg"
            width="34"
          />
          <span
            className="sc-fznXWL ljBoXT"
          >
            Se connecter avec Pôle emploi
          </span>
        </a>
        <div>
          <div
            data-css-1xjdp6g=""
          >
            <div
              data-css-1u3clyi=""
            />
            <div
              data-css-1vfpuyw=""
            />
          </div>
          <div
            data-css-1l117w4=""
          >
            <div
              data-css-6x2xk9=""
            />
            <div
              data-css-dh4rml=""
            />
          </div>
          <div
            data-css-3dqrhs=""
          >
            <div
              data-css-jidh41=""
            />
            <div
              data-css-zkhvkf=""
            />
          </div>
          <div
            data-css-14agfjn=""
          >
            <div
              data-css-1dkszzo=""
            />
            <div
              data-css-mqumhe=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots UserJobCheck default 1`] = `
<div
  data-css-18sl43g=""
>
  <div
    data-css-1uksfg7=""
  >
    <div
      data-css-t3tkv6=""
    >
      <div
        data-css-10e2wtd=""
      >
        <div
          className="sc-fzowVh jwiMmD"
        >
          <p
            className="MuiTypography-root MuiTypography-body1"
          >
            Si vous êtes créateur / créatrice d'entreprise ou auto-entrepreneur, vous ne pouvez pas effectuer votre actualisation sur Zen.
          </p>
          <div
            className="sc-fzoJus VaXCe"
            style={
              Object {
                "paddingTop": "3rem",
              }
            }
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-contained sc-AxhUy sc-AxgMl CxjTE MuiButton-containedPrimary"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                J'ai compris
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root sc-fzoVTD klYvDw"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.01 11H4v2h12.01v3L20 12l-3.99-4z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div>
          <div
            data-css-1xjdp6g=""
          >
            <div
              data-css-1u3clyi=""
            />
            <div
              data-css-1vfpuyw=""
            />
          </div>
          <div
            data-css-1l117w4=""
          >
            <div
              data-css-6x2xk9=""
            />
            <div
              data-css-dh4rml=""
            />
          </div>
          <div
            data-css-3dqrhs=""
          >
            <div
              data-css-jidh41=""
            />
            <div
              data-css-zkhvkf=""
            />
          </div>
          <div
            data-css-14agfjn=""
          >
            <div
              data-css-1dkszzo=""
            />
            <div
              data-css-mqumhe=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots YoutubeVideo default 1`] = `
<div
  data-css-18sl43g=""
>
  <div
    data-css-1uksfg7=""
  >
    <div
      data-css-t3tkv6=""
    >
      <div
        data-css-10e2wtd=""
      >
        <button
          className="sc-fzpisO kpqNHu"
          id="video"
          onClick={[Function]}
          style={
            Object {
              "borderRadius": "5%",
              "boxShadow": "0 0 1.5rem 0.5rem rgba(0, 0, 0, 0.05)",
              "maxHeight": "35rem",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": "62rem",
            }
          }
          title="Visualiser : Vidéo de présentation du service Zen"
          type="button"
        >
          <div
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "height": "100%",
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
          >
            <img
              alt=""
              src="player.svg"
            />
          </div>
          <img
            alt="Vidéo de présentation du service Zen"
            src="youtube-video-thumb.jpg"
            style={
              Object {
                "borderRadius": "5%",
                "maxHeight": "35rem",
                "maxWidth": "100%",
                "overflow": "hidden",
                "width": "62rem",
              }
            }
          />
        </button>
        <div>
          <div
            data-css-1xjdp6g=""
          >
            <div
              data-css-1u3clyi=""
            />
            <div
              data-css-1vfpuyw=""
            />
          </div>
          <div
            data-css-1l117w4=""
          >
            <div
              data-css-6x2xk9=""
            />
            <div
              data-css-dh4rml=""
            />
          </div>
          <div
            data-css-3dqrhs=""
          >
            <div
              data-css-jidh41=""
            />
            <div
              data-css-zkhvkf=""
            />
          </div>
          <div
            data-css-14agfjn=""
          >
            <div
              data-css-1dkszzo=""
            />
            <div
              data-css-mqumhe=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
